<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/navigation_real_estate">

    <main_fragment
        android:id="@+id/navigation_real_estate"
        android:name="com.openclassrooms.realestatemanager.ui.property.browse.BrowseFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_browse" />
    <main_fragment
        android:id="@+id/navigation_create"
        android:name="com.openclassrooms.realestatemanager.ui.property.edit.create.PropertyCreateFragment"
        android:label="@string/create_property"
        tools:layout="@layout/fragment_create" />
    <main_fragment
        android:id="@+id/navigation_search"
        android:name="com.openclassrooms.realestatemanager.ui.property.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
</navigation>