...
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8">

                <fragment
                    android:id="@+id/nav_host_fragment"
                    android:name="com.openclassrooms.realestatemanager.ui.fragments.MainNavHostFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:defaultNavHost="true" />

                <ProgressBar
...
